fixed faq spacing

--- a/styles/base.css
+++ b/styles/base.css
@@ -164,3 +164,7 @@ footer{
 {
 	width:200px;
 }
+#toptop
+{
+	margin-top:300px;
+}
